# lineageguard

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  seed.py
docs/: MCP_SETUP.md  OPENMETADATA_SETUP.md
examples/: sample_change_spec.json  sample_output.json  sample_output.md
src/lineageguard/: cli.py  client.py  engine.py  formatter.py  governance.py  lineage.py  mcp_server.py  models.py  ranker.py
tests/: test_ranker.py
